small fixes to spacing of results banner image

--- a/source/scss/_results.scss
+++ b/source/scss/_results.scss
@@ -37,14 +37,16 @@
     }
 
     .result__banner__icon {
-        height: 120px;
         padding-bottom: 20px;
     }
 
     .result__banner__icon img {
-        height: 100px;
+        height: 85px;
         margin: 0 auto;
         max-width: 145px;
+        @media (min-width: 600px){
+            height: 100px;
+        }
     }
 
     .result__banner__reaction {
@@ -96,6 +98,10 @@
             max-height:40px;
             opacity: .5;
             margin: 0 auto;
+        }
+        @media(min-width:1008px){
+            max-width: 55px;
+            max-height: 55px;
         }
     }
 
